Update: lab/scan analysis screens, API service, drug/heart routers, and other improvements

--- a/Respiratory_Disease_Classifier_API/pyproject.toml
+++ b/Respiratory_Disease_Classifier_API/pyproject.toml
@@ -17,7 +17,10 @@ dependencies = [
     "pydantic-settings>=2.2.0",
     "pydub>=0.25.1",
     "boto3>=1.42.59",
+    "pillow>=12.1.1",
 ]
 
 [tool.uv]
-dev-dependencies = []
+dev-dependencies = [
+    "pytest>=9.0.2",
+]
